--- a/EmployeeManagement.Models/EmployeeManagement.Models.csproj
+++ b/EmployeeManagement.Models/EmployeeManagement.Models.csproj
@@ -5,4 +5,8 @@
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
